调整文件目录，解决发布后读取不到路径的问题

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -12,8 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\gettk.js" />
   </ItemGroup>
 
 </Project>
